--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -26,6 +26,9 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.jackson-annotations-3.0-rc3.jar=..\\lib_jar\\jackson-annotations-3.0-rc3.jar
+file.reference.jackson-core-2.19.0-rc2.jar=..\\lib_jar\\jackson-core-2.19.0-rc2.jar
+file.reference.jackson-databind-2.19.0-rc2.jar=..\\lib_jar\\jackson-databind-2.19.0-rc2.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mysql-connector-j-9.3.0.jar=..\\lib_jar\\mysql-connector-j-9.3.0.jar
@@ -40,7 +43,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.jackson-annotations-3.0-rc3.jar}:\
+    ${file.reference.jackson-core-2.19.0-rc2.jar}:\
+    ${file.reference.jackson-databind-2.19.0-rc2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
