--- a/SWP_BL5_TEAM1/nbproject/private/private.properties
+++ b/SWP_BL5_TEAM1/nbproject/private/private.properties
@@ -1,5 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/java stuff/apache tomcat
-j2ee.server.instance=tomcat101:home=D:\\java stuff\\apache tomcat
+deploy.ant.properties.file=C:\\Users\\Do Dac Thai Duong\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.activation-1.1.1.jar=D:\\Study\\SWP391_E1_BL5_Group1_ClinicBookingManagement\\lib_jar\\activation-1.1.1.jar
+file.reference.activation-1.1.1_1.jar=D:\\Study\\SWP391_E1_BL5_Group1_ClinicBookingManagement\\lib_jar\\activation-1.1.1_1.jar
+file.reference.javax.mail-1.6.2.jar=D:\\Study\\SWP391_E1_BL5_Group1_ClinicBookingManagement\\lib_jar\\javax.mail-1.6.2.jar
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
+javac.debug=true
+javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\build.properties
