patientAppointmentList jsp and servlet (demo done)

--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>DoctorBySlotServlet</servlet-name>
         <servlet-class>controller.DoctorBySlotServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GetPatientAppointmentsServlet</servlet-name>
+        <servlet-class>controller.GetPatientAppointmentsServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <url-pattern>/PatientBookAppointmentServlet</url-pattern>
@@ -15,5 +19,9 @@
     <servlet-mapping>
         <servlet-name>DoctorBySlotServlet</servlet-name>
         <url-pattern>/doctor-by-slot</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetPatientAppointmentsServlet</servlet-name>
+        <url-pattern>/GetPatientAppointmentsServlet</url-pattern>
     </servlet-mapping>
 </web-app>
