--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -24,15 +24,42 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.activation-1.1.1.jar=..\\lib_jar\\activation-1.1.1.jar
+file.reference.activation-1.1.1_1.jar=..\\lib_jar\\activation-1.1.1_1.jar
+file.reference.commons-collections4-4.1.jar=..\\lib_jar\\commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar=..\\lib_jar\\commons-logging-1.2.jar
+file.reference.core-3.4.1.jar=..\\lib_jar\\core-3.4.1.jar
+file.reference.fluent-hc-4.5.13.jar=..\\lib_jar\\fluent-hc-4.5.13.jar
+file.reference.google-api-client-1.32.1.jar=..\\lib_jar\\google-api-client-1.32.1.jar
+file.reference.google-api-client-2.7.2.jar=..\\lib_jar\\google-api-client-2.7.2.jar
+file.reference.google-api-services-sheets-v4-rev614-1.18.0-rc.jar=..\\lib_jar\\google-api-services-sheets-v4-rev614-1.18.0-rc.jar
+file.reference.google-auth-library-credentials-1.33.1.jar=..\\lib_jar\\google-auth-library-credentials-1.33.1.jar
+file.reference.google-auth-library-oauth2-http-1.33.1.jar=..\\lib_jar\\google-auth-library-oauth2-http-1.33.1.jar
+file.reference.google-http-client-1.46.3.jar=..\\lib_jar\\google-http-client-1.46.3.jar
+file.reference.google-http-client-jackson2-1.46.3.jar=..\\lib_jar\\google-http-client-jackson2-1.46.3.jar
+file.reference.google-oauth-client-1.39.0.jar=..\\lib_jar\\google-oauth-client-1.39.0.jar
+file.reference.gson-2.9.0.jar=..\\lib_jar\\gson-2.9.0.jar
+file.reference.httpclient-4.5.13.jar=..\\lib_jar\\httpclient-4.5.13.jar
+file.reference.httpcore-4.4.13.jar=..\\lib_jar\\httpcore-4.4.13.jar
+file.reference.jackson-annotations-3.0-rc3.jar=..\\lib_jar\\jackson-annotations-3.0-rc3.jar
 file.reference.jackson-core-2.19.0-rc2.jar=..\\lib_jar\\jackson-core-2.19.0-rc2.jar
 file.reference.jackson-databind-2.18.3.jar=..\\lib_jar\\jackson-databind-2.18.3.jar
 file.reference.jackson-databind-2.19.0-rc2.jar=..\\lib_jar\\jackson-databind-2.19.0-rc2.jar
 file.reference.jakarta.jakartaee-api-8.0.0.jar=..\\lib_jar\\jakarta.jakartaee-api-8.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javase-3.5.3.jar=..\\lib_jar\\javase-3.5.3.jar
+file.reference.javax.mail-1.6.2.jar=..\\lib_jar\\javax.mail-1.6.2.jar
+file.reference.jaxb-api-2.1.jar=..\\lib_jar\\jaxb-api-2.1.jar
+file.reference.json-20210307.jar=..\\lib_jar\\json-20210307.jar
 file.reference.mysql-connector-j-9.3.0.jar=..\\lib_jar\\mysql-connector-j-9.3.0.jar
+file.reference.poi-3.15.jar=..\\lib_jar\\poi-3.15.jar
+file.reference.poi-ooxml-3.16.jar=..\\lib_jar\\poi-ooxml-3.16.jar
+file.reference.poi-ooxml-schemas-3.16.jar=..\\lib_jar\\poi-ooxml-schemas-3.16.jar
+file.reference.sqljdbc4-3.0.jar=..\\lib_jar\\sqljdbc4-3.0.jar
 file.reference.src-java=src/java
 file.reference.SWP_BL5_TEAM1-test=test
+file.reference.xmlbeans-2.3.0.jar=..\\lib_jar\\xmlbeans-2.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,13 +70,40 @@ j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
-    ${file.reference.jakarta.jakartaee-api-8.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.activation-1.1.1_1.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.core-3.4.1.jar}:\
+    ${file.reference.fluent-hc-4.5.13.jar}:\
+    ${file.reference.google-api-client-1.32.1.jar}:\
+    ${file.reference.google-api-client-2.7.2.jar}:\
+    ${file.reference.google-api-services-sheets-v4-rev614-1.18.0-rc.jar}:\
+    ${file.reference.google-auth-library-credentials-1.33.1.jar}:\
+    ${file.reference.google-auth-library-oauth2-http-1.33.1.jar}:\
+    ${file.reference.google-http-client-1.46.3.jar}:\
+    ${file.reference.google-http-client-jackson2-1.46.3.jar}:\
+    ${file.reference.google-oauth-client-1.39.0.jar}:\
+    ${file.reference.gson-2.9.0.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.httpcore-4.4.13.jar}:\
+    ${file.reference.jackson-annotations-3.0-rc3.jar}:\
     ${file.reference.jackson-core-2.19.0-rc2.jar}:\
     ${file.reference.jackson-databind-2.18.3.jar}:\
     ${file.reference.jackson-databind-2.19.0-rc2.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.jakarta.jakartaee-api-8.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.javase-3.5.3.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.json-20210307.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.poi-ooxml-3.16.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar}:\
+    ${file.reference.sqljdbc4-3.0.jar}:\
+    ${file.reference.xmlbeans-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
