--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -12,6 +12,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
+buildfile=nbbuild.xml
 client.urlPart=
 compile.jsps=false
 conf.dir=src/conf
@@ -24,45 +25,75 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.jackson-core-2.19.0-rc2.jar=..\\lib_jar\\jackson-core-2.19.0-rc2.jar
-file.reference.jackson-databind-2.18.3.jar=..\\lib_jar\\jackson-databind-2.18.3.jar
-file.reference.jackson-databind-2.19.0-rc2.jar=..\\lib_jar\\jackson-databind-2.19.0-rc2.jar
-file.reference.jakarta.jakartaee-api-8.0.0.jar=..\\lib_jar\\jakarta.jakartaee-api-8.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mysql-connector-j-9.3.0.jar=..\\lib_jar\\mysql-connector-j-9.3.0.jar
+file.reference.com.fasterxml.jackson.core.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\com.fasterxml.jackson.core.jar
+file.reference.com.fasterxml.jackson.databind.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\com.fasterxml.jackson.databind.jar
+file.reference.commons-fileupload2-core-2.0.0-M2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\commons-fileupload2-core-2.0.0-M2.jar
+file.reference.commons-logging-1.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.activation-1.2.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.activation-1.2.0.jar
+file.reference.javax.mail-1.6.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.mail-1.6.2.jar
+file.reference.javax.mail-api-1.6.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.mail.jar
+file.reference.javax.servlet-api-3.0.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.servlet-api-3.0.1.jar
+file.reference.jaxb-api-2.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.3.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jaxb-api-2.3.1.jar
+file.reference.jaxb-runtime-2.3.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jaxb-runtime-2.3.1.jar
+file.reference.mail.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\mail.jar
+file.reference.mysql-connector-j-9.3.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\mysql-connector-j-9.3.0.jar
+file.reference.mysql-connector-java-8.0.17.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\mysql-connector-java-8.0.17.jar
+file.reference.smtp-1.6.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\smtp-1.6.2.jar
+file.reference.sqljdbc42.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\sqljdbc42.jar
 file.reference.src-java=src/java
-file.reference.SWP_BL5_TEAM1-test=test
+file.reference.SWP391_E1_BL5_Group1_ClinicBookingManagement-main-lib_jar=../lib_jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=10-web
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.9-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote-ffm.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
+j2ee.platform.classpath=${j2ee.server.domain}/bin/tomcat-juli.jar:${j2ee.server.domain}/lib/annotations-api.jar:${j2ee.server.domain}/lib/catalina-ant.jar:${j2ee.server.domain}/lib/catalina-ha.jar:${j2ee.server.domain}/lib/catalina-ssi.jar:${j2ee.server.domain}/lib/catalina-storeconfig.jar:${j2ee.server.domain}/lib/catalina-tribes.jar:${j2ee.server.domain}/lib/catalina.jar:${j2ee.server.domain}/lib/ecj-4.27.jar:${j2ee.server.domain}/lib/el-api.jar:${j2ee.server.domain}/lib/jakartaee-migration-1.0.9-shaded.jar:${j2ee.server.domain}/lib/jasper-el.jar:${j2ee.server.domain}/lib/jasper.jar:${j2ee.server.domain}/lib/jaspic-api.jar:${j2ee.server.domain}/lib/jsp-api.jar:${j2ee.server.domain}/lib/servlet-api.jar:${j2ee.server.domain}/lib/tomcat-api.jar:${j2ee.server.domain}/lib/tomcat-coyote-ffm.jar:${j2ee.server.domain}/lib/tomcat-coyote.jar:${j2ee.server.domain}/lib/tomcat-dbcp.jar:${j2ee.server.domain}/lib/tomcat-i18n-cs.jar:${j2ee.server.domain}/lib/tomcat-i18n-de.jar:${j2ee.server.domain}/lib/tomcat-i18n-es.jar:${j2ee.server.domain}/lib/tomcat-i18n-fr.jar:${j2ee.server.domain}/lib/tomcat-i18n-ja.jar:${j2ee.server.domain}/lib/tomcat-i18n-ko.jar:${j2ee.server.domain}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.domain}/lib/tomcat-i18n-ru.jar:${j2ee.server.domain}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.domain}/lib/tomcat-jdbc.jar:${j2ee.server.domain}/lib/tomcat-jni.jar:${j2ee.server.domain}/lib/tomcat-util-scan.jar:${j2ee.server.domain}/lib/tomcat-util.jar:${j2ee.server.domain}/lib/tomcat-websocket.jar:${j2ee.server.domain}/lib/websocket-api.jar:${j2ee.server.domain}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
-    ${file.reference.jakarta.jakartaee-api-8.0.0.jar}:\
+    ${file.reference.commons-fileupload2-core-2.0.0-M2.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.5.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.httpclient-4.5.5.jar}:\
+    ${file.reference.httpcore-4.4.9.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jackson-core-2.19.0-rc2.jar}:\
-    ${file.reference.jackson-databind-2.18.3.jar}:\
-    ${file.reference.jackson-databind-2.19.0-rc2.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.servlet-api-3.0.1.jar}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.jaxb-api-2.3.1.jar}:\
+    ${file.reference.jaxb-runtime-2.3.1.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.smtp-1.6.2.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.com.fasterxml.jackson.databind.jar}:\
+    ${file.reference.com.fasterxml.jackson.core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=24
+javac.target=24
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -77,6 +108,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+lib.dir=${file.reference.SWP391_E1_BL5_Group1_ClinicBookingManagement-main-lib_jar}
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
@@ -90,7 +122,7 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=.
 src.dir=${file.reference.src-java}
-test.test.dir=${file.reference.SWP_BL5_TEAM1-test}
+test.src.dir=
 war.content.additional=
 war.ear.name=${war.name}
 war.name=SWP_BL5_TEAM1.war
