--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 # Ignore NetBeans private configs
 /SWP_BL5_TEAM/nbproject/private/
 /SWP_BL5_TEAM/nbproject/genfiles.properties
+/SWP_BL5_TEAM1/nbproject/private/
