--- a/SWP_BL5_TEAM1/nbproject/private/private.properties
+++ b/SWP_BL5_TEAM1/nbproject/private/private.properties
@@ -1,4 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\JackGarland\\AppData\\Roaming\\NetBeans\\25\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.activation-1.1.1_1.jar=D:\\project\\SWP391_E1_BL5_Group1_ClinicBookingManagement\\lib_jar\\activation-1.1.1.jar
 j2ee.server.domain=C:/Program Files/Apache Software Foundation/apache-tomcat-10.1.40
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\apache-tomcat-10.1.40:base=C:\\Program Files\\Apache Software Foundation\\apache-tomcat-10.1.40
-user.properties.file=C:\\Users\\JackGarland\\AppData\\Roaming\\NetBeans\\25\\build.properties
+j2ee.server.home=D:/java stuff/apache tomcat
+j2ee.server.instance=tomcat101:home=D:\\java stuff\\apache tomcat
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
