--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -12,7 +12,6 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-buildfile=nbbuild.xml
 client.urlPart=
 compile.jsps=false
 conf.dir=src/conf
@@ -26,8 +25,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.activation-1.1.1.jar=..\\lib_jar\\activation-1.1.1.jar
-file.reference.activation-1.1.1_1.jar=..\\lib_jar\\activation-1.1.1_1.jar
+file.reference.com.fasterxml.jackson.core.jar=..\\lib_jar\\com.fasterxml.jackson.core.jar
+file.reference.com.fasterxml.jackson.databind.jar=..\\lib_jar\\com.fasterxml.jackson.databind.jar
 file.reference.commons-collections4-4.1.jar=..\\lib_jar\\commons-collections4-4.1.jar
+file.reference.commons-fileupload2-core-2.0.0-M2.jar=..\\lib_jar\\commons-fileupload2-core-2.0.0-M2.jar
 file.reference.commons-logging-1.2.jar=..\\lib_jar\\commons-logging-1.2.jar
 file.reference.core-3.4.1.jar=..\\lib_jar\\core-3.4.1.jar
 file.reference.fluent-hc-4.5.13.jar=..\\lib_jar\\fluent-hc-4.5.13.jar
@@ -50,14 +51,21 @@ file.reference.jakarta.jakartaee-api-8.0.0.jar=..\\lib_jar\\jakarta.jakartaee-ap
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javase-3.5.3.jar=..\\lib_jar\\javase-3.5.3.jar
+file.reference.javax.activation-1.2.0.jar=..\\lib_jar\\javax.activation-1.2.0.jar
 file.reference.javax.mail-1.6.2.jar=..\\lib_jar\\javax.mail-1.6.2.jar
+file.reference.javax.mail-api-1.6.2.jar=..\\lib_jar\\javax.mail-api-1.6.2.jar
+file.reference.javax.servlet-api-3.0.1.jar=..\\lib_jar\\javax.servlet-api-3.0.1.jar
 file.reference.jaxb-api-2.1.jar=..\\lib_jar\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.3.1.jar=..\\lib_jar\\jaxb-api-2.3.1.jar
+file.reference.jaxb-runtime-2.3.1.jar=..\\lib_jar\\jaxb-runtime-2.3.1.jar
 file.reference.json-20210307.jar=..\\lib_jar\\json-20210307.jar
+file.reference.mail.jar=..\\lib_jar\\mail.jar
 file.reference.mysql-connector-j-9.3.0.jar=..\\lib_jar\\mysql-connector-j-9.3.0.jar
+file.reference.mysql-connector-java-8.0.17.jar=..\\lib_jar\\mysql-connector-java-8.0.17.jar
 file.reference.poi-3.15.jar=..\\lib_jar\\poi-3.15.jar
 file.reference.poi-ooxml-3.16.jar=..\\lib_jar\\poi-ooxml-3.16.jar
 file.reference.poi-ooxml-schemas-3.16.jar=..\\lib_jar\\poi-ooxml-schemas-3.16.jar
-file.reference.sqljdbc4-3.0.jar=..\\lib_jar\\sqljdbc4-3.0.jar
+file.reference.smtp-1.6.2.jar=..\\lib_jar\\smtp-1.6.2.jar
 file.reference.src-java=src/java
 file.reference.SWP_BL5_TEAM1-test=test
 file.reference.xmlbeans-2.3.0.jar=..\\lib_jar\\xmlbeans-2.3.0.jar
@@ -66,14 +74,16 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=10-web
-j2ee.platform.classpath=${j2ee.server.domain}/bin/tomcat-juli.jar:${j2ee.server.domain}/lib/annotations-api.jar:${j2ee.server.domain}/lib/catalina-ant.jar:${j2ee.server.domain}/lib/catalina-ha.jar:${j2ee.server.domain}/lib/catalina-ssi.jar:${j2ee.server.domain}/lib/catalina-storeconfig.jar:${j2ee.server.domain}/lib/catalina-tribes.jar:${j2ee.server.domain}/lib/catalina.jar:${j2ee.server.domain}/lib/ecj-4.27.jar:${j2ee.server.domain}/lib/el-api.jar:${j2ee.server.domain}/lib/jakartaee-migration-1.0.9-shaded.jar:${j2ee.server.domain}/lib/jasper-el.jar:${j2ee.server.domain}/lib/jasper.jar:${j2ee.server.domain}/lib/jaspic-api.jar:${j2ee.server.domain}/lib/jsp-api.jar:${j2ee.server.domain}/lib/servlet-api.jar:${j2ee.server.domain}/lib/tomcat-api.jar:${j2ee.server.domain}/lib/tomcat-coyote-ffm.jar:${j2ee.server.domain}/lib/tomcat-coyote.jar:${j2ee.server.domain}/lib/tomcat-dbcp.jar:${j2ee.server.domain}/lib/tomcat-i18n-cs.jar:${j2ee.server.domain}/lib/tomcat-i18n-de.jar:${j2ee.server.domain}/lib/tomcat-i18n-es.jar:${j2ee.server.domain}/lib/tomcat-i18n-fr.jar:${j2ee.server.domain}/lib/tomcat-i18n-ja.jar:${j2ee.server.domain}/lib/tomcat-i18n-ko.jar:${j2ee.server.domain}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.domain}/lib/tomcat-i18n-ru.jar:${j2ee.server.domain}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.domain}/lib/tomcat-jdbc.jar:${j2ee.server.domain}/lib/tomcat-jni.jar:${j2ee.server.domain}/lib/tomcat-util-scan.jar:${j2ee.server.domain}/lib/tomcat-util.jar:${j2ee.server.domain}/lib/tomcat-websocket.jar:${j2ee.server.domain}/lib/websocket-api.jar:${j2ee.server.domain}/lib/websocket-client-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.9-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote-ffm.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.activation-1.1.1_1.jar}:\
+    ${file.reference.com.fasterxml.jackson.core.jar}:\
+    ${file.reference.com.fasterxml.jackson.databind.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-fileupload2-core-2.0.0-M2.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.core-3.4.1.jar}:\
     ${file.reference.fluent-hc-4.5.13.jar}:\
@@ -96,14 +106,21 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.javase-3.5.3.jar}:\
+    ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.javax.servlet-api-3.0.1.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.jaxb-api-2.3.1.jar}:\
+    ${file.reference.jaxb-runtime-2.3.1.jar}:\
     ${file.reference.json-20210307.jar}:\
+    ${file.reference.mail.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.poi-3.15.jar}:\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
-    ${file.reference.sqljdbc4-3.0.jar}:\
+    ${file.reference.smtp-1.6.2.jar}:\
     ${file.reference.xmlbeans-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -111,11 +128,13 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=24
-javac.target=24
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit.classpath}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -130,7 +149,6 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-lib.dir=${file.reference.SWP391_E1_BL5_Group1_ClinicBookingManagement-main-lib_jar}
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
@@ -144,7 +162,7 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=.
 src.dir=${file.reference.src-java}
-test.src.dir=
+test.test.dir=${file.reference.SWP_BL5_TEAM1-test}
 war.content.additional=
 war.ear.name=${war.name}
 war.name=SWP_BL5_TEAM1.war
