--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -28,6 +28,7 @@ excludes=
 file.reference.activation-1.1.1.jar=..\\lib_jar\\activation-1.1.1.jar
 file.reference.activation-1.1.1_1.jar=..\\lib_jar\\activation-1.1.1_1.jar
 file.reference.commons-collections4-4.1.jar=..\\lib_jar\\commons-collections4-4.1.jar
+file.reference.commons-fileupload2-core-2.0.0-M2.jar=..\\lib_jar\\commons-fileupload2-core-2.0.0-M2.jar
 file.reference.commons-logging-1.2.jar=..\\lib_jar\\commons-logging-1.2.jar
 file.reference.core-3.4.1.jar=..\\lib_jar\\core-3.4.1.jar
 file.reference.fluent-hc-4.5.13.jar=..\\lib_jar\\fluent-hc-4.5.13.jar
@@ -104,7 +105,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
     ${file.reference.sqljdbc4-3.0.jar}:\
-    ${file.reference.xmlbeans-2.3.0.jar}
+    ${file.reference.xmlbeans-2.3.0.jar}:\
+    ${file.reference.commons-fileupload2-core-2.0.0-M2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
