--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <servlet>
+        <Servlet-name>MedicalRecordManager</Servlet-name>
+        <Servlet-class>controller.staff.MedicalRecordManager</Servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <servlet-class>controller.patient.PatientBookAppointmentServlet</servlet-class>
     </servlet>
@@ -62,4 +66,9 @@
         <servlet-name>queueRecordController</servlet-name>
         <url-pattern>/queueRecordController</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <Servlet-name>MedicalRecordManager</Servlet-name>
+        <url-pattern>/MedicalRecordManager</url-pattern>
+    </servlet-mapping>
+    
 </web-app>
