--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -24,51 +24,33 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.activation-1.1.1.jar=..\\lib_jar\\activation-1.1.1.jar
-file.reference.com.fasterxml.jackson.core.jar=..\\lib_jar\\com.fasterxml.jackson.core.jar
-file.reference.com.fasterxml.jackson.databind.jar=..\\lib_jar\\com.fasterxml.jackson.databind.jar
-file.reference.commons-collections4-4.1.jar=..\\lib_jar\\commons-collections4-4.1.jar
-file.reference.commons-fileupload2-core-2.0.0-M2.jar=..\\lib_jar\\commons-fileupload2-core-2.0.0-M2.jar
-file.reference.commons-logging-1.2.jar=..\\lib_jar\\commons-logging-1.2.jar
-file.reference.core-3.4.1.jar=..\\lib_jar\\core-3.4.1.jar
-file.reference.fluent-hc-4.5.13.jar=..\\lib_jar\\fluent-hc-4.5.13.jar
-file.reference.google-api-client-1.32.1.jar=..\\lib_jar\\google-api-client-1.32.1.jar
-file.reference.google-api-client-2.7.2.jar=..\\lib_jar\\google-api-client-2.7.2.jar
-file.reference.google-api-services-sheets-v4-rev614-1.18.0-rc.jar=..\\lib_jar\\google-api-services-sheets-v4-rev614-1.18.0-rc.jar
-file.reference.google-auth-library-credentials-1.33.1.jar=..\\lib_jar\\google-auth-library-credentials-1.33.1.jar
-file.reference.google-auth-library-oauth2-http-1.33.1.jar=..\\lib_jar\\google-auth-library-oauth2-http-1.33.1.jar
-file.reference.google-http-client-1.46.3.jar=..\\lib_jar\\google-http-client-1.46.3.jar
-file.reference.google-http-client-jackson2-1.46.3.jar=..\\lib_jar\\google-http-client-jackson2-1.46.3.jar
-file.reference.google-oauth-client-1.39.0.jar=..\\lib_jar\\google-oauth-client-1.39.0.jar
-file.reference.gson-2.9.0.jar=..\\lib_jar\\gson-2.9.0.jar
-file.reference.httpclient-4.5.13.jar=..\\lib_jar\\httpclient-4.5.13.jar
-file.reference.httpcore-4.4.13.jar=..\\lib_jar\\httpcore-4.4.13.jar
-file.reference.jackson-annotations-3.0-rc3.jar=..\\lib_jar\\jackson-annotations-3.0-rc3.jar
-file.reference.jackson-core-2.19.0-rc2.jar=..\\lib_jar\\jackson-core-2.19.0-rc2.jar
-file.reference.jackson-databind-2.18.3.jar=..\\lib_jar\\jackson-databind-2.18.3.jar
-file.reference.jackson-databind-2.19.0-rc2.jar=..\\lib_jar\\jackson-databind-2.19.0-rc2.jar
-file.reference.jakarta.jakartaee-api-8.0.0.jar=..\\lib_jar\\jakarta.jakartaee-api-8.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javase-3.5.3.jar=..\\lib_jar\\javase-3.5.3.jar
-file.reference.javax.activation-1.2.0.jar=..\\lib_jar\\javax.activation-1.2.0.jar
-file.reference.javax.mail-1.6.2.jar=..\\lib_jar\\javax.mail-1.6.2.jar
-file.reference.javax.mail-api-1.6.2.jar=..\\lib_jar\\javax.mail-api-1.6.2.jar
-file.reference.javax.servlet-api-3.0.1.jar=..\\lib_jar\\javax.servlet-api-3.0.1.jar
-file.reference.jaxb-api-2.1.jar=..\\lib_jar\\jaxb-api-2.1.jar
-file.reference.jaxb-api-2.3.1.jar=..\\lib_jar\\jaxb-api-2.3.1.jar
-file.reference.jaxb-runtime-2.3.1.jar=..\\lib_jar\\jaxb-runtime-2.3.1.jar
-file.reference.json-20210307.jar=..\\lib_jar\\json-20210307.jar
-file.reference.mail.jar=..\\lib_jar\\mail.jar
-file.reference.mysql-connector-j-9.3.0.jar=..\\lib_jar\\mysql-connector-j-9.3.0.jar
-file.reference.mysql-connector-java-8.0.17.jar=..\\lib_jar\\mysql-connector-java-8.0.17.jar
-file.reference.poi-3.15.jar=..\\lib_jar\\poi-3.15.jar
-file.reference.poi-ooxml-3.16.jar=..\\lib_jar\\poi-ooxml-3.16.jar
-file.reference.poi-ooxml-schemas-3.16.jar=..\\lib_jar\\poi-ooxml-schemas-3.16.jar
-file.reference.smtp-1.6.2.jar=..\\lib_jar\\smtp-1.6.2.jar
+file.reference.com.fasterxml.jackson.core.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\com.fasterxml.jackson.core.jar
+file.reference.com.fasterxml.jackson.core.jar.zip=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\com.fasterxml.jackson.core.jar.zip
+file.reference.com.fasterxml.jackson.databind.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\com.fasterxml.jackson.databind.jar
+file.reference.com.fasterxml.jackson.databind.jar.zip=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\com.fasterxml.jackson.databind.jar.zip
+file.reference.commons-fileupload2-core-2.0.0-M2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\commons-fileupload2-core-2.0.0-M2.jar
+file.reference.commons-logging-1.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.activation-1.2.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.activation-1.2.0.jar
+file.reference.javax.mail-1.6.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.mail-1.6.2.jar
+file.reference.javax.mail-api-1.6.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.mail.jar
+file.reference.javax.servlet-api-3.0.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\javax.servlet-api-3.0.1.jar
+file.reference.jaxb-api-2.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.3.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jaxb-api-2.3.1.jar
+file.reference.jaxb-runtime-2.3.1.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\jaxb-runtime-2.3.1.jar
+file.reference.mail.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\mail.jar
+file.reference.mysql-connector-j-9.3.0.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\mysql-connector-j-9.3.0.jar
+file.reference.mysql-connector-java-8.0.17.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\mysql-connector-java-8.0.17.jar
+file.reference.smtp-1.6.2.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\smtp-1.6.2.jar
+file.reference.sqljdbc42.jar=E:\\Repos\\SWP391_E1_BL5_Group1_ClinicBookingManagement-main\\lib\\sqljdbc42.jar
 file.reference.src-java=src/java
 file.reference.SWP_BL5_TEAM1-test=test
-file.reference.xmlbeans-2.3.0.jar=..\\lib_jar\\xmlbeans-2.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -79,49 +61,31 @@ j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
-    ${file.reference.activation-1.1.1.jar}:\
     ${file.reference.com.fasterxml.jackson.core.jar}:\
+    ${file.reference.com.fasterxml.jackson.core.jar.zip}:\
     ${file.reference.com.fasterxml.jackson.databind.jar}:\
-    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.com.fasterxml.jackson.databind.jar.zip}:\
     ${file.reference.commons-fileupload2-core-2.0.0-M2.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.core-3.4.1.jar}:\
-    ${file.reference.fluent-hc-4.5.13.jar}:\
-    ${file.reference.google-api-client-1.32.1.jar}:\
-    ${file.reference.google-api-client-2.7.2.jar}:\
-    ${file.reference.google-api-services-sheets-v4-rev614-1.18.0-rc.jar}:\
-    ${file.reference.google-auth-library-credentials-1.33.1.jar}:\
-    ${file.reference.google-auth-library-oauth2-http-1.33.1.jar}:\
-    ${file.reference.google-http-client-1.46.3.jar}:\
-    ${file.reference.google-http-client-jackson2-1.46.3.jar}:\
-    ${file.reference.google-oauth-client-1.39.0.jar}:\
-    ${file.reference.gson-2.9.0.jar}:\
-    ${file.reference.httpclient-4.5.13.jar}:\
-    ${file.reference.httpcore-4.4.13.jar}:\
-    ${file.reference.jackson-annotations-3.0-rc3.jar}:\
-    ${file.reference.jackson-core-2.19.0-rc2.jar}:\
-    ${file.reference.jackson-databind-2.18.3.jar}:\
-    ${file.reference.jackson-databind-2.19.0-rc2.jar}:\
-    ${file.reference.jakarta.jakartaee-api-8.0.0.jar}:\
+    ${file.reference.fluent-hc-4.5.5.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.httpclient-4.5.5.jar}:\
+    ${file.reference.httpcore-4.4.9.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.javase-3.5.3.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail-1.6.2.jar}:\
     ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.javax.servlet-api-3.0.1.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
     ${file.reference.jaxb-runtime-2.3.1.jar}:\
-    ${file.reference.json-20210307.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
-    ${file.reference.poi-3.15.jar}:\
-    ${file.reference.poi-ooxml-3.16.jar}:\
-    ${file.reference.poi-ooxml-schemas-3.16.jar}:\
     ${file.reference.smtp-1.6.2.jar}:\
-    ${file.reference.xmlbeans-2.3.0.jar}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
