--- a/SWP_BL5_TEAM1/nbproject/private/private.properties
+++ b/SWP_BL5_TEAM1/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/java stuff/apache tomcat
-j2ee.server.instance=tomcat101:home=D:\\java stuff\\apache tomcat
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+deploy.ant.properties.file=C:\\Users\\Do Dac Thai Duong\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
+user.properties.file=C:\\Users\\Do Dac Thai Duong\\AppData\\Roaming\\NetBeans\\13\\build.properties
