ManagerTimeSlotList jsp and servlet (in progress), BUG

--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -56,4 +56,8 @@
         <servlet-name>queueRecordController</servlet-name>
         <url-pattern>/queueRecordController</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerTimeSlotListServlet</servlet-name>
+        <url-pattern>/ManagerTimeSlotListServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
