complete service manager

--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -26,7 +26,7 @@
     </servlet>
     <servlet>
         <servlet-name>ExaminationPackageManager</servlet-name>
-        <servlet-class>controller.staff.ExaminationPackageManager</servlet-class>
+        <servlet-class>controller.manager.ExaminationPackageManager</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ManagerTimeSlotListServlet</servlet-name>
@@ -55,5 +55,9 @@
     <servlet-mapping>
         <servlet-name>queueRecordController</servlet-name>
         <url-pattern>/queueRecordController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ExaminationPackageManager</servlet-name>
+        <url-pattern>/ExaminationPackageManager</url-pattern>
     </servlet-mapping>
 </web-app>
