--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <servlet>
-        <servlet-name>MedicalRecordManager</servlet-name>
-        <servlet-class>controller.doctor.MedicalRecordManager</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <servlet-class>controller.patient.PatientBookAppointmentServlet</servlet-class>
     </servlet>
@@ -66,10 +62,13 @@
         <servlet-name>queueRecordController</servlet-name>
         <url-pattern>/queueRecordController</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>MedicalRecordsServlet</servlet-name>
+        <servlet-class>controller.doctor.MedicalRecordsServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
-        <servlet-name>MedicalRecordManager</servlet-name>
-        <url-pattern>/MedicalRecordManager</url-pattern>
+            <servlet-name>MedicalRecordsServlet</servlet-name>
+            <url-pattern>/doctor/medical-records</url-pattern>
     </servlet-mapping>
-    
     
 </web-app>
