reception view of Appointments for Invoice

--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <servlet>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <servlet-class>controller.patient.PatientBookAppointmentServlet</servlet-class>
@@ -51,10 +48,13 @@
         <servlet-name>QueueManager</servlet-name>
         <servlet-class>controller.doctor.QueueManager</servlet-class>
     </servlet>
-
     <servlet>
         <servlet-name>DoctorAppointmentDetail</servlet-name>
         <servlet-class>controller.doctor.DoctorAppointmentDetail</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ReceptionAppointmentsListServlet</servlet-name>
+        <servlet-class>controller.staff.ReceptionAppointmentsListServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
@@ -112,7 +112,7 @@
         <servlet-name>MedicalRecordsServlet</servlet-name>
         <url-pattern>/doctor/medical-records</url-pattern>
     </servlet-mapping>
-     <servlet>
+    <servlet>
         <servlet-name>PatientListServlet</servlet-name>
         <servlet-class>controller.staff.PatientListServlet</servlet-class>
     </servlet>
@@ -123,5 +123,9 @@
     <servlet-mapping>
         <servlet-name>DoctorAppointmentDetail</servlet-name>
         <url-pattern>/DoctorAppointmentDetail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ReceptionAppointmentsListServlet</servlet-name>
+        <url-pattern>/ReceptionAppointmentsListServlet</url-pattern>
     </servlet-mapping>
 </web-app>
