--- a/SWP_BL5_TEAM1/nbproject/private/private.properties
+++ b/SWP_BL5_TEAM1/nbproject/private/private.properties
@@ -1,7 +1,4 @@
-
-
-deploy.ant.properties.file=C:\\Users\\JackGarland\\AppData\\Roaming\\NetBeans\\25\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/apache-tomcat-10.1.40
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\apache-tomcat-10.1.40
-user.properties.file=C:\\Users\\JackGarland\\AppData\\Roaming\\NetBeans\\25\\build.properties
-
+deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\19\\tomcat101.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat101
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat101
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\19\\build.properties
