login intergate fix

--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -222,4 +222,7 @@
         <servlet-name>ManagerAppointmentAnalyticServlet</servlet-name>
         <url-pattern>/ManagerAppointmentAnalyticServlet</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>home.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
